# makina

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
crates/makina/: Cargo.toml
crates/makina/src/: flags.rs  logging.rs  main.rs
crates/makina/src/api/: handlers.rs  mod.rs  models.rs
crates/makina/src/features/: mod.rs
crates/makina/src/features/findings/: mod.rs
crates/makina/src/features/knowledge/: mod.rs
crates/makina/src/features/labels/: mod.rs
crates/makina/src/features/model/: mod.rs
crates/makina/src/features/scan/: mod.rs
crates/makina/src/features/verify/: mod.rs
crates/makina/src/feedback/: store.rs
crates/makina/src/infra/: ml.rs  mod.rs
crates/makina/src/store/: mod.rs
docs/: ARCHITECTURE.md  DEPLOY.md
ml/: pyproject.toml
ml/deus_ml/: __init__.py  analyzer.py  features.py  logging_config.py  server.py  taint_engine.py
ml/deus_ml/models/: gbdt.py
ml/makina_ml/: __init__.py  analyzer.py  call_graph.py  embedder.py  features.py  flags.py  logging_config.py  semgrep_scanner.py  server.py  taint_engine.py
ml/makina_ml/models/: gbdt.py
ml/makina_ml/services/: training.py
ml/scripts/: bulk_import.py  cloudrun-entrypoint.sh  requirements.txt  run_ablations.py  seed_knowledge.py  train_offline.py
ml/scripts/converters/: cvefixes.py  cvefixes_pairs.py
ml/semgrep-custom/: taint.yaml
ml/tests/: conftest.py  test_converter.py  test_flags.py  test_taint_engine.py  test_training_helpers.py  test_training_pipeline.py
(+59 files in other folders)
